--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ add_executable(Compiler src/main.cpp
         src/ScannerReturn.h
         src/ScannerReturn.cpp
         src/IScanner.h
+        src/IParser.h
+        src/ParserFactory.h
+        src/ParserFactory.cpp
         src/Scanner.h
         src/Scanner.cpp
         src/ScannerFactory.h
@@ -16,4 +19,4 @@ add_executable(Compiler src/main.cpp
         src/ScannerException.h
         src/ScannerException.cpp
         src/Token.h
-        src/Token.cpp)
+        src/Token.cpp src/Parser.cpp src/Parser.h src/ParserException.cpp src/ParserException.h)
