[Broken] Changed Symbol table to its own class TabelaSimbolos.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,4 @@ add_executable(Compiler src/main.cpp
         src/ScannerException.h
         src/ScannerException.cpp
         src/Token.h
-        src/Token.cpp src/Parser.cpp src/Parser.h src/ParserException.cpp src/ParserException.h src/Simbolo.cpp src/Simbolo.h)
+        src/Token.cpp src/Parser.cpp src/Parser.h src/ParserException.cpp src/ParserException.h src/Simbolo.cpp src/Simbolo.h src/TabelaSimbolos.cpp src/TabelaSimbolos.h)
